# modular_tcp_chat

./: .gitignore  ClientConfiguration.json  README.md  ServerConfiguration.json  pyproject.toml  schema.sql
src/client/: application.py  client_lib.py  config.py
src/client/strategies/: encryption.py  handshakes.py
src/lib/: abstract_factory.py  auxiliaries.py  constants.py
src/lib/strategies/: handlers.py
src/server/: application.py  config.py  server_lib.py
src/server/strategies/: encryption.py  handshakes.py
src/server/strategies/basic_authentication/: auxiliaries.py
